[gd_scene load_steps=9 format=3 uid="uid://c5mk6io7iuibt"]

[ext_resource type="PackedScene" uid="uid://cucmdpglb2vjo" path="res://assets/obj/world_obj/obj_gun_pickup.gltf" id="1_it76q"]
[ext_resource type="Material" uid="uid://ceugjpx2i558v" path="res://materials/world_material.tres" id="2_s4t55"]
[ext_resource type="Script" path="res://scripts/world/WorldGunPickup.gd" id="2_up0mw"]
[ext_resource type="PackedScene" uid="uid://b42gdv3d42kau" path="res://scenes/weapons_pickups/MachineGunPickup.tscn" id="4_v1bad"]
[ext_resource type="PackedScene" uid="uid://ca2bn6ov1mjp1" path="res://scenes/weapons_pickups/MinigunPickup.tscn" id="5_8sluf"]
[ext_resource type="PackedScene" uid="uid://oulq67rokly8" path="res://scenes/weapons_pickups/RiflePickup.tscn" id="6_8ok1v"]
[ext_resource type="PackedScene" uid="uid://bx3n0kgkrgd86" path="res://scenes/weapons_pickups/ShotgunPickup.tscn" id="7_jdtlh"]

[sub_resource type="BoxShape3D" id="BoxShape3D_5e64s"]

[node name="WorldGunPickup" instance=ExtResource("1_it76q")]
script = ExtResource("2_up0mw")

[node name="obj_gun_pickup" parent="." index="0"]
surface_material_override/0 = ExtResource("2_s4t55")

[node name="GunPickupArea" type="Area3D" parent="." index="1"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="GunPickupArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.5, -0.5)
shape = SubResource("BoxShape3D_5e64s")

[node name="Guns" type="Node3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, -0.5)

[node name="MachineGunPickup" parent="." index="3" instance=ExtResource("4_v1bad")]
transform = Transform3D(0.843044, 0, -0.537844, 0.1071, 0.979973, 0.167874, 0.527073, -0.199129, 0.826161, 0.391606, 1.01546, -0.0925763)
visible = false

[node name="MinigunPickup" parent="." index="4" instance=ExtResource("5_8sluf")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0.228741, 0.995619, -0.177203)
visible = false

[node name="RiflePickup" parent="." index="5" instance=ExtResource("6_8ok1v")]
transform = Transform3D(0.767255, -0.0796263, 0.63638, 0, 0.992263, 0.124156, -0.641342, -0.095259, 0.761318, 0.83046, 0.994006, -0.0670462)
visible = false

[node name="ShotgunPickup" parent="." index="6" instance=ExtResource("7_jdtlh")]
transform = Transform3D(-3.09086e-08, 0.707107, -0.707107, -1, -4.37114e-08, 0, -3.09086e-08, 0.707107, 0.707107, 0.0874367, 1.02117, -0.203652)
visible = false

[connection signal="body_entered" from="GunPickupArea" to="." method="_on_gun_pickup_area_body_entered"]
